changed survey color

--- a/css/standard.css
+++ b/css/standard.css
@@ -444,7 +444,7 @@ a.leaflet-popup-close-button {
     border-radius: 12px;
 }
 .survey-btn {
-    background: #e06e0c;
+    background: #d2232a;
 }
 .survey-btn strong {
     line-height: 41px !important;
